--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
+title: notebook testing
+subtitle: by ...
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "/notebook" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
